--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -26,7 +26,7 @@ serde_derive = "1.0.114"
 serde_json = "1.0.56"
 
 # data base
-diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
+diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
 
@@ -39,3 +39,6 @@ chrono = "0.4"
 
 # File changer detection
 notify = "4.0.15"
+
+# Websocket
+tokio-tungstenite = "0.15.0"
