--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,6 +30,9 @@ diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
 
+# Bundled SQLite
+libsqlite3-sys = { version = "0.18.0", features = ["bundled"], optional = true }
+
 # qr code
 qrcode = "0.12.0"
 oxide-auth = "0.5.0"
