--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ uuid = { version = "0.8.1", features = ["serde", "v4"] }
 
 # Crypto
 ring = "0.16.20"
+openssl = {version = "0.10.36", features = ["vendored"]}
 
 #json
 reqwest = { version = "0.11.4", features = ["blocking", "json"] }
@@ -46,3 +47,10 @@ notify = "4.0.15"
 
 # Websocket
 tokio-tungstenite = "0.15.0"
+
+# Numerical libraries
+num-traits = "0.2.14"
+num-derive = "0.3.3"
+
+# Lazy initialization
+once_cell = "1.8.0"
