--- a/backend/example.env
+++ b/backend/example.env
@@ -1,3 +1,6 @@
 ROCKET_ENV=development
 DATABASE_URL=test.db
 SETTINGS_DIR=""
+DOMAIN_ORIGIN=example.com
+PRIVATE_RSA_KEY=file.pem
+PUBLIC_RSA_KEY=file.rsa
