--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+### VScode ###
+
+.vscode
+
+### GENERATED FILES ###
+
+*.rsa
+*.pem
+settings.json
+
 ### NODE ###
 
 # Logs
@@ -143,3 +153,6 @@ target
 # env files
 .env*
 
+### DataBase
+
+*.db
