--- a/.github/workflows/BuildBackend.yaml
+++ b/.github/workflows/BuildBackend.yaml
@@ -5,6 +5,7 @@ on:
     branches: [ backend ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch: [ backend ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -12,7 +13,7 @@ env:
 jobs:
   build_backend:
     env:
-      HOME: "/home/ubuntu"
+      HOME: "/home/axiom"
     runs-on: [self-hosted, linux]
 
     steps:
