fixed action  error
Signed-off-by: Axioms <atomic.axioms@gmail.com>

--- a/.github/workflows/BuildFrontend.yaml
+++ b/.github/workflows/BuildFrontend.yaml
@@ -1,8 +1,10 @@
+name: Node
+on:
   push:
-    branches:
-      - frontend
-    tags: # Always, regardless of paths above
-        - '*'
+    branches: [ backend ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build_frontend:
 
