--- a/.github/workflows/BuildFrontend.yaml
+++ b/.github/workflows/BuildFrontend.yaml
@@ -1,10 +1,10 @@
-name: Build Frontend
-on: 
+name: Node
+on:
   push:
-    branches:
-      - frontend
-    tags: # Always, regardless of paths above
-        - '*'
+    branches: [ frontend ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build_frontend:
 
@@ -26,3 +26,9 @@ jobs:
       - name: Building Site
         working-directory: ./frontend
         run: npm run build --if-present
+      - name: Pack and Upload
+        run: zip ./dist.zip ./frontend/dist/* -r
+      - uses: actions/upload-artifact@v2
+        with:
+          name: artifact
+          path: ./dist.zip
