--- a/.github/workflows/BuildFrontend.yaml
+++ b/.github/workflows/BuildFrontend.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         working-directory: ./frontend
         run: npm ci
+      - name: copy .env file to dir
+        working-directory: ./frontend
+        run: cp /home/axiom/frontend.env .env
       - name: Building Site
         working-directory: ./frontend
         run: npm run build --if-present
